--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,5 +16,10 @@ syntect = { version = "5.2.0", default-features = false, features = ["default-fa
 leptos-use = { version = "0.15.5", features = ["use_window_scroll"] }
 serde_json = "1.0.138"
 
+
 [workspace]
 members = ["src-tauri"]
+
+[dependencies.web-sys]
+version = "0.3"
+features=["css"]
