--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -24,5 +24,15 @@ serde_json = "1"
 syntect = { version = "5.2.0", default-features = false, features = ["default-fancy"] }
 thiserror = "2.0.11"
 tauri-plugin-dialog = "2"
-tauri-plugin-fs = "2"
-
+leo-lang = "2.4.1"
+leo-compiler = "2.4.1"
+leo-ast = "2.4.1"
+leo-errors = "2.4.1"
+leo-package = "2.4.1"
+leo-retriever = "2.4.1"
+leo-span = "2.4.1"
+snarkvm = "1.1.0"
+indexmap = "2.6"
+notify = { version = "8.0.0", features = ["serde"] }
+futures = "0.3.31"
+notify-debouncer-mini = "0.6.0"
