--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,6 +15,7 @@ console_error_panic_hook = "0.1.7"
 syntect = { version = "5.2.0", default-features = false, features = ["default-fancy"] }
 leptos-use = { version = "0.15.5", features = ["use_window_scroll"] }
 serde_json = "1.0.138"
+indexmap = "2.7.1"
 
 [workspace]
 members = ["src-tauri"]
