--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -38,6 +38,7 @@ notify-debouncer-mini = "0.6.0"
 tauri-plugin-shell = "2"
 tauri-plugin-clipboard-manager = "2.2.1"
 rand = "0.8.0"
+tauri-plugin-opener = "2"
 
 
 [dependencies.snarkvm-circuit-network]
