--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -39,6 +39,7 @@ tauri-plugin-shell = "2"
 tauri-plugin-clipboard-manager = "2.2.1"
 rand = "0.8.0"
 tauri-plugin-opener = "2"
+tauri-plugin-os = "2"
 
 
 [dependencies.snarkvm-circuit-network]
