--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -23,7 +23,6 @@ serde = { version = "1", features = ["derive"] }
 serde_json = "1"
 syntect = { version = "5.2.0", default-features = false, features = ["default-fancy"] }
 thiserror = "2.0.11"
-tauri-plugin-dialog = "2"
 leo-lang = "2.4.1"
 leo-compiler = "2.4.1"
 leo-ast = "2.4.1"
@@ -41,6 +40,7 @@ rand = "0.8.0"
 tauri-plugin-opener = "2"
 tauri-plugin-os = "2"
 tauri-plugin-store = "2"
+rfd = "0.15.2"
 
 
 [dependencies.snarkvm-circuit-network]
