--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -40,7 +40,7 @@ rand = "0.8.0"
 tauri-plugin-opener = "2"
 tauri-plugin-os = "2"
 tauri-plugin-store = "2"
-rfd = {version = "0.15.2", default-features = false, features= ["gtk3"] }
+rfd = {version = "0.15.2", default-features = false, features= ["gtk3", "common-controls-v6"] }
 aleo-std = "0.1.24"
 
 [dependencies.snarkvm]
